updated the css and added images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Drag and Drop Puzzle Game</title>
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
@@ -45,6 +45,6 @@
         </nav>
     </footer>
 
-    <script src="script/main.js"></script>
+    <script src="js/"></script>
 </body>
 </html>
